# promptlightning

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  CNAME  DEPLOYMENT.md  Dockerfile  LICENSE  LLM_CLIENT_OPTIMIZATIONS.md  LMDB_IMPLEMENTATION_SUMMARY.md  MIGRATION.md  PERFORMANCE_OPTIMIZATIONS.md  README.md  RENDERER_OPTIMIZATION_SUMMARY.md  ROADMAP.md  coverage.json  index.html  promptvault.yaml  pyproject.toml  pytest.ini  railway.toml  validate_tests.py
.github/workflows/: ci.yml  release.yml
dakora/: __init__.py  cli.py  exceptions.py  logging.py  playground.py  vault.py
dakora/llm/: __init__.py  client.py  models.py
dakora/registry/: base.py
docs/: ARCHITECTURE.md  PERFORMANCE.md  llm_client_performance.md  lmdb_registry.md
examples/: README.md  fastapi_openai.py  llm_client_performance.py  lmdb_example.py  requirements.txt
examples/microsoft-agent-framework/: .env.example  .gitignore  README.md  load_env.py  multi_agent_example.py  requirements.txt  setup.ps1  setup.sh  simple_agent_example.py
examples/openai-agents/: README.md  requirements.txt  research_assistant.py
examples/openai-agents/prompts/: analyst_system.yaml  coordinator_system.yaml  planner_system.yaml  report_template.yaml  synthesizer_system.yaml
examples/templates/: analyzer.yaml  chat_assistant.yaml
playground/: index.html
playground/assets/: index-BRydU1xw.css  index-BUf_LzKr.js  index-CN3rA2Es.js  index-DG23GU1d.css  index-DJn9AUKc.css  index-DSxbTus9.js  monaco-CIb0MCAR.js  vendor-CYabRHnS.js
promptlightning/: cli.py  exceptions.py  playground.py  renderer.py  vault.py
promptlightning/llm/: client.py
promptlightning/registry/: lmdb_registry.py  migrate.py
prompts/: id-2.yaml  multi-input-template.yaml  summarizer.yaml
promptvault/: cli.py  exceptions.py  model.py  playground.py  renderer.py  types.py  vault.py  watcher.py
promptvault/registry/: local.py
scripts/: benchmark_playground.py
tests/: benchmark_lmdb_vs_local.py  conftest.py  manual_test_openai.py  smoke_test.py  test_init.py  test_llm_client.py  test_llm_client_performance.py  test_llm_models.py  test_lmdb_registry.py  test_migration.py  test_playground_api.py  test_playground_performance.py  test_playground_server.py  test_runner.py  test_vault_execute.py
web/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
web/src/: App.tsx  index.css
web/src/components/: NewTemplateDialog.tsx  StatusBar.tsx  TemplateEditor.tsx  TemplateList.tsx
web/src/hooks/: useApi.ts
web/src/types/: index.ts
web/src/utils/: api.ts
