[project]
name = "dakora"
version = "1.0.1"
description = "A Python library for managing and rendering prompt templates with type-safe inputs, versioning, and optional logging"
readme = "README.md"
authors = [
    { name = "bogdanpi", email = "bogdan@iduntechnologies.com" }
]
requires-python = ">=3.11"
dependencies = [
    "jinja2>=3.1.6",
    "pydantic>=2.11.9",
    "pyyaml>=6.0.2",
    "typer>=0.19.2",
    "watchdog>=6.0.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.scripts]
dakora = "dakora.cli:app"

[project.urls]
Homepage = "https://github.com/bogdan-pistol/dakora"
Repository = "https://github.com/bogdan-pistol/dakora.git"
Issues = "https://github.com/bogdan-pistol/dakora/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["dakora"]

[tool.hatch.build.targets.wheel.force-include]
# Include playground directory (built by CI, or empty with .gitkeep)
"playground" = "playground"

[tool.hatch.build.targets.sdist]
# Source dist includes dakora source and web/ source
exclude = ["web/node_modules"]

[tool.hatch.build.targets.sdist.force-include]
# Force include playground directory structure
"playground" = "playground"


[tool.uv]
dev-dependencies = [
    "build>=1.3.0",
    "twine>=6.2.0",
    "httpx>=0.25.0",
    "requests>=2.31.0",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "tomli-w>=1.0.0",
]
